--- a/src/main/resources/themes/default/achievement_item.fxml
+++ b/src/main/resources/themes/default/achievement_item.fxml
@@ -10,22 +10,25 @@
           minWidth="-Infinity" prefWidth="400.0" styleClass="tile" xmlns="http://javafx.com/javafx/8.0.40"
           fx:controller="com.faforever.client.user.AchievementItemController">
   <columnConstraints>
-    <ColumnConstraints hgrow="NEVER" />
-    <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="80.0" />
+    <ColumnConstraints hgrow="NEVER"/>
+    <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0"/>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="80.0"/>
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+    <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+    <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
   </rowConstraints>
   <children>
-    <Label fx:id="nameLabel" styleClass="achievement-title" text="&lt;Name&gt;" wrapText="true" GridPane.columnIndex="1" />
+    <Label fx:id="nameLabel" styleClass="achievement-title" text="&lt;Name&gt;" wrapText="true"
+           GridPane.columnIndex="1"/>
     <Label fx:id="descriptionLabel" text="&lt;description&gt;" wrapText="true" GridPane.columnIndex="1"
            GridPane.columnSpan="2147483647" GridPane.rowIndex="1"/>
     <Label fx:id="pointsLabel" text="&lt;Points&gt;" GridPane.columnIndex="2" GridPane.halignment="RIGHT"/>
-    <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" progress="0.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-    <Label fx:id="progressLabel" text="&lt;progress&gt;" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-    <ImageView fx:id="imageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2147483647" GridPane.valignment="CENTER" />
+    <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" progress="0.0" GridPane.columnIndex="1"
+                 GridPane.rowIndex="2"/>
+    <Label fx:id="progressLabel" text="&lt;progress&gt;" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+    <ImageView fx:id="imageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true"
+               GridPane.halignment="CENTER" GridPane.rowSpan="2147483647" GridPane.valignment="CENTER"/>
   </children>
 </GridPane>
