--- a/src/main/resources/themes/default/chat_user_context_menu.fxml
+++ b/src/main/resources/themes/default/chat_user_context_menu.fxml
@@ -17,7 +17,7 @@
     </CustomMenuItem>
     <MenuItem fx:id="removeCustomColorItem" mnemonicParsing="false" onAction="#onRemoveCustomColor"
               text="%chat.userContext.removeColor"/>
-    <SeparatorMenuItem mnemonicParsing="false" />
+    <SeparatorMenuItem fx:id="socialSeperator" mnemonicParsing="false"/>
     <MenuItem fx:id="addFriendItem" mnemonicParsing="false" onAction="#onAddFriend" text="%chat.userContext.addFriend" />
     <MenuItem fx:id="removeFriendItem" mnemonicParsing="false" onAction="#onRemoveFriend" text="%chat.userContext.removeFriend" />
     <MenuItem fx:id="addFoeItem" mnemonicParsing="false" onAction="#onAddFoe" text="%chat.userContext.addFoe" />
