extracted friend/foe property to an enum class

--- a/src/main/resources/themes/default/style-webview.css
+++ b/src/main/resources/themes/default/style-webview.css
@@ -12,6 +12,7 @@ html, body {
   /* Use same as -fx-light-text-color */
   color: #BFBEBA;
   font-family: "Segoe UI", "Arial", "Tahoma", "sans-serif";
+  overflow: hidden;
 }
 
 a {
