--- a/src/main/resources/themes/default/mod_vault.fxml
+++ b/src/main/resources/themes/default/mod_vault.fxml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="modVaultRoot" maxHeight="1.7976931348623157E308"
-            maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.40"
-            fx:controller="com.faforever.client.mod.ModVaultController">
+<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="modVaultRoot" xmlns="http://javafx.com/javafx/8.0.40"
+           fx:controller="com.faforever.client.mod.ModVaultController">
    <children>
-      <ScrollPane fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                  AnchorPane.topAnchor="0.0">
+      <ScrollPane fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <content>
-            <VBox alignment="TOP_CENTER">
+            <VBox fx:id="contentPane" alignment="TOP_CENTER">
                <children>
-                  <VBox maxWidth="1200.0" spacing="5.0" styleClass="mod-vault">
+                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1470.0" spacing="5.0" styleClass="mod-vault"
+                        VBox.vgrow="ALWAYS">
                      <children>
                         <HBox maxWidth="1.7976931348623157E308" spacing="10.0">
                            <children>
@@ -38,26 +38,49 @@
                                  </padding>
                               </Button>
                            </children>
+                           <VBox.margin>
+                              <Insets bottom="20.0" top="20.0"/>
+                           </VBox.margin>
                         </HBox>
                         <VBox fx:id="showroomGroup" spacing="5.0">
                            <children>
-                              <Label styleClass="h2" text="%modVault.recommendedUidMods"/>
+                              <Label styleClass="h2" text="%modVault.recommendedUidMods">
+                                 <VBox.margin>
+                                    <Insets top="20.0"/>
+                                 </VBox.margin>
+                              </Label>
                               <FlowPane fx:id="recommendedUiModsPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                        prefWrapLength="1200.0" vgap="10.0"/>
-                              <Label styleClass="h2" text="%modVault.newestMods"/>
+                                        prefWrapLength="1500.0" vgap="10.0"/>
+                              <Label styleClass="h2" text="%modVault.newestMods">
+                                 <VBox.margin>
+                                    <Insets top="20.0"/>
+                                 </VBox.margin>
+                              </Label>
                               <FlowPane fx:id="newestModsPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                        prefWrapLength="1200.0" vgap="10.0"/>
-                              <Label styleClass="h2" text="%modVault.popularMods"/>
+                                        prefWrapLength="1500.0" vgap="10.0"/>
+                              <Label styleClass="h2" text="%modVault.popularMods">
+                                 <VBox.margin>
+                                    <Insets top="20.0"/>
+                                 </VBox.margin>
+                              </Label>
                               <FlowPane fx:id="popularModsPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                        prefWrapLength="1200.0" vgap="10.0"/>
-                              <Label styleClass="h2" text="%modVault.mostLikedMods"/>
+                                        prefWrapLength="1500.0" vgap="10.0"/>
+                              <Label styleClass="h2" text="%modVault.mostLikedMods">
+                                 <VBox.margin>
+                                    <Insets top="20.0"/>
+                                 </VBox.margin>
+                              </Label>
                               <FlowPane fx:id="mostLikedMods" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                        prefWrapLength="1200.0" vgap="10.0"/>
+                                        prefWrapLength="1500.0" vgap="10.0"/>
                            </children>
                         </VBox>
                         <VBox fx:id="searchResultGroup" spacing="5.0">
                            <children>
-                              <Label styleClass="h1" text="%modVault.searchResult"/>
+                              <Label styleClass="h1" text="%modVault.searchResult">
+                                 <VBox.margin>
+                                    <Insets top="20.0"/>
+                                 </VBox.margin>
+                              </Label>
                               <FlowPane fx:id="searchResultPane" hgap="10.0" vgap="10.0"/>
                            </children>
                         </VBox>
@@ -70,5 +93,14 @@
             </VBox>
          </content>
       </ScrollPane>
+      <VBox fx:id="loadingPane" alignment="CENTER">
+         <children>
+            <Label contentDisplay="TOP" text="%modVault.loadingMods">
+               <graphic>
+                  <ProgressIndicator/>
+               </graphic>
+            </Label>
+         </children>
+      </VBox>
    </children>
-</AnchorPane>
+</StackPane>
