Fixed #77, fixed #8 * Notify about incoming messages * Highlight tab on new private message

--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -726,6 +726,10 @@
   -fx-background-color: transparent;
 }
 
+.tab:unread {
+  -fx-background-color: -fx-accent;
+}
+
 /***************** Channel Tab *****************/
 
 .channel-tab-friends-title * {
