--- a/src/main/resources/themes/default/transient_notification.fxml
+++ b/src/main/resources/themes/default/transient_notification.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import java.lang.String?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="transientNotificationRoot" alignment="TOP_CENTER"
-           maxHeight="-Infinity" minHeight="0.0" opacity="0.9" prefHeight="104.0" styleClass="transient-notification"
+           maxHeight="-Infinity" minHeight="0.0" onMouseClicked="#onClicked" opacity="0.9" prefHeight="104.0"
            xmlns="http://javafx.com/javafx/8.0.40"
            fx:controller="com.faforever.client.notification.TransientNotificationController">
   <children>
@@ -41,4 +41,8 @@
       </styleClass>
     </Button>
   </children>
+  <styleClass>
+    <String fx:value="transient-notification"/>
+    <String fx:value="pointable"/>
+  </styleClass>
 </StackPane>
