--- a/src/main/resources/themes/default/channel_tab.fxml
+++ b/src/main/resources/themes/default/channel_tab.fxml
@@ -35,7 +35,7 @@
           </AnchorPane>
           <VBox fx:id="channelTabScrollPaneVBox" maxHeight="1.7976931348623157E308" SplitPane.resizableWithParent="false">
             <children>
-              <AnchorPane prefHeight="200.0" prefWidth="200.0">
+              <AnchorPane>
                 <children>
                   <TextField fx:id="userSearchTextField" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
                   <Button fx:id="advancedUserFilter" mnemonicParsing="false" onAction="#onAdvancedUserFilter"
