--- a/src/main/resources/themes/default/user_info_window.fxml
+++ b/src/main/resources/themes/default/user_info_window.fxml
@@ -85,99 +85,102 @@
         </Tab>
         <Tab closable="false" text="%userInfo.achievements">
           <content>
-            <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308"
-                        maxWidth="1.7976931348623157E308">
-              <content>
-                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
-                  <children>
-                    <Label fx:id="loadingProgressLabel" alignment="CENTER" contentDisplay="TOP" graphicTextGap="10.0"
-                           maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                           text="%achievements.loading" VBox.vgrow="ALWAYS">
-                      <graphic>
-                        <ProgressIndicator fx:id="loadingProgressIndicator" prefHeight="50.0" prefWidth="50.0"/>
-                      </graphic>
-                    </Label>
-                    <GridPane VBox.vgrow="NEVER">
-                      <columnConstraints>
-                        <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
-                        <ColumnConstraints hgrow="ALWAYS"/>
-                        <ColumnConstraints hgrow="SOMETIMES"/>
-                        <ColumnConstraints hgrow="ALWAYS"/>
-                        <ColumnConstraints hgrow="ALWAYS"/>
-                      </columnConstraints>
-                      <rowConstraints>
-                        <RowConstraints prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                      </rowConstraints>
+            <VBox>
+              <children>
+                <Label fx:id="loadingProgressLabel" alignment="CENTER" contentDisplay="TOP" graphicTextGap="10.0"
+                       maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%achievements.loading"
+                       VBox.vgrow="ALWAYS">
+                  <graphic>
+                    <ProgressIndicator prefHeight="50.0" prefWidth="50.0"/>
+                  </graphic>
+                </Label>
+                <ScrollPane fx:id="achievementsPane" fitToWidth="true" maxHeight="1.7976931348623157E308"
+                            maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                  <content>
+                    <VBox maxWidth="1.7976931348623157E308" spacing="10.0">
                       <children>
-                        <Label fx:id="unlockedOfTotalLabel" styleClass="h1" text="0/0" GridPane.columnIndex="1"/>
-                        <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"
-                                   GridPane.rowSpan="2147483647" GridPane.valignment="TOP"/>
-                        <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
-                        <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"
-                                   GridPane.columnIndex="2"/>
-                        <Label fx:id="pointsOfTotalLabel" styleClass="h1" text="0/0" GridPane.columnIndex="3"/>
-                        <Label text="%achievements.sortBy" GridPane.columnIndex="4"/>
+                        <GridPane VBox.vgrow="NEVER">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+                            <ColumnConstraints hgrow="SOMETIMES"/>
+                            <ColumnConstraints hgrow="NEVER"/>
+                            <ColumnConstraints hgrow="SOMETIMES"/>
+                            <ColumnConstraints hgrow="SOMETIMES"/>
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                          </rowConstraints>
+                          <children>
+                            <Label fx:id="unlockedOfTotalLabel" styleClass="h1" text="0/0" GridPane.columnIndex="1"/>
+                            <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"
+                                       GridPane.rowSpan="2147483647" GridPane.valignment="TOP"/>
+                            <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
+                            <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"
+                                       GridPane.columnIndex="2"/>
+                            <Label fx:id="pointsOfTotalLabel" styleClass="h1" text="0/0" GridPane.columnIndex="3"/>
+                            <Label text="%achievements.sortBy" GridPane.columnIndex="4"/>
+                          </children>
+                        </GridPane>
+                        <GridPane fx:id="mostRecentAchievementPane" hgap="20.0" VBox.vgrow="NEVER">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="NEVER"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints vgrow="NEVER"/>
+                            <RowConstraints vgrow="NEVER"/>
+                            <RowConstraints vgrow="NEVER"/>
+                            <RowConstraints vgrow="ALWAYS"/>
+                            <RowConstraints vgrow="NEVER"/>
+                            <RowConstraints vgrow="NEVER"/>
+                          </rowConstraints>
+                          <children>
+                            <ImageView fx:id="mostRecentAchievementImageView" fitHeight="100.0" fitWidth="100.0"
+                                       pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="3"/>
+                            <Label text="%achievements.mostRecent" GridPane.columnIndex="1"/>
+                            <Label fx:id="mostRecentAchievementNameLabel" styleClass="achievement-title"
+                                   text="&lt;Title&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1"
+                                   GridPane.valignment="TOP"/>
+                            <Label fx:id="mostRecentAchievementDescriptionLabel" text="&lt;Description&gt;"
+                                   GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP"/>
+                          </children>
+                        </GridPane>
+                        <HBox fx:id="unlockedAchievementsHeader" alignment="CENTER" spacing="10.0">
+                          <children>
+                            <Separator HBox.hgrow="ALWAYS"/>
+                            <Label styleClass="h1" text="%achievements.unlocked"/>
+                            <Separator HBox.hgrow="ALWAYS"/>
+                          </children>
+                          <VBox.margin>
+                            <Insets top="20.0"/>
+                          </VBox.margin>
+                        </HBox>
+                        <FlowPane fx:id="unlockedAchievementsContainer" hgap="10.0" vgap="10.0"/>
+                        <HBox fx:id="lockedAchievementsHeader" alignment="CENTER" spacing="10.0">
+                          <children>
+                            <Separator HBox.hgrow="ALWAYS"/>
+                            <Label styleClass="h1" text="%achievements.open"/>
+                            <Separator HBox.hgrow="ALWAYS"/>
+                          </children>
+                          <VBox.margin>
+                            <Insets top="20.0"/>
+                          </VBox.margin>
+                        </HBox>
+                        <FlowPane fx:id="lockedAchievementsContainer" hgap="10.0" vgap="10.0">
+                          <VBox.margin>
+                            <Insets/>
+                          </VBox.margin>
+                        </FlowPane>
                       </children>
-                    </GridPane>
-                    <GridPane fx:id="mostRecentAchievementPane" hgap="20.0" VBox.vgrow="NEVER">
-                      <columnConstraints>
-                        <ColumnConstraints hgrow="NEVER"/>
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
-                      </columnConstraints>
-                      <rowConstraints>
-                        <RowConstraints vgrow="NEVER"/>
-                        <RowConstraints vgrow="NEVER"/>
-                        <RowConstraints vgrow="NEVER"/>
-                        <RowConstraints vgrow="ALWAYS"/>
-                        <RowConstraints vgrow="NEVER"/>
-                        <RowConstraints vgrow="NEVER"/>
-                      </rowConstraints>
-                      <children>
-                        <ImageView fx:id="mostRecentAchievementImageView" fitHeight="100.0" fitWidth="100.0"
-                                   pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="4"/>
-                        <Label text="%achievements.mostRecent" GridPane.columnIndex="1"/>
-                        <Label fx:id="mostRecentAchievementNameLabel" styleClass="achievement-title"
-                               text="&lt;Title&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1"
-                               GridPane.valignment="TOP"/>
-                        <Label fx:id="mostRecentAchievementDescriptionLabel" text="&lt;Description&gt;"
-                               GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP"/>
-                      </children>
-                    </GridPane>
-                    <HBox alignment="CENTER" spacing="10.0">
-                      <children>
-                        <Separator HBox.hgrow="ALWAYS"/>
-                        <Label styleClass="h1" text="%achievements.unlocked"/>
-                        <Separator HBox.hgrow="ALWAYS"/>
-                      </children>
-                      <VBox.margin>
-                        <Insets top="20.0"/>
-                      </VBox.margin>
-                    </HBox>
-                    <FlowPane fx:id="achievedAchievementsContainer" hgap="10.0" vgap="10.0"/>
-                    <HBox alignment="CENTER" spacing="10.0">
-                      <children>
-                        <Separator HBox.hgrow="ALWAYS"/>
-                        <Label styleClass="h1" text="%achievements.open"/>
-                        <Separator HBox.hgrow="ALWAYS"/>
-                      </children>
-                      <VBox.margin>
-                        <Insets top="20.0"/>
-                      </VBox.margin>
-                    </HBox>
-                    <FlowPane fx:id="availableAchievementsContainer" hgap="10.0" vgap="10.0">
-                      <VBox.margin>
-                        <Insets/>
-                      </VBox.margin>
-                    </FlowPane>
-                  </children>
-                  <padding>
-                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                  </padding>
-                </VBox>
-              </content>
-            </ScrollPane>
+                      <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                      </padding>
+                    </VBox>
+                  </content>
+                </ScrollPane>
+              </children>
+            </VBox>
           </content>
         </Tab>
       </tabs>
