--- a/src/main/resources/themes/default/user_info_window.fxml
+++ b/src/main/resources/themes/default/user_info_window.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.chart.StackedBarChart?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
@@ -13,14 +14,8 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="userInfoRoot" minHeight="256.0" minWidth="256.0" prefHeight="700.0"
           prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.40"
@@ -31,8 +26,8 @@
     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="50.0" vgrow="NEVER"/>
-    <RowConstraints minHeight="50.0" vgrow="NEVER"/>
+    <RowConstraints minHeight="60.0" vgrow="NEVER"/>
+    <RowConstraints minHeight="60.0" vgrow="NEVER"/>
     <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
   </rowConstraints>
   <children>
@@ -53,35 +48,160 @@
     <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="2"
              GridPane.rowSpan="2147483647">
       <tabs>
-        <Tab closable="false" text="%userInfo.ratingOverTime">
+        <Tab text="%userInfo.general">
           <content>
-            <VBox>
-              <children>
-                <HBox alignment="TOP_RIGHT" spacing="10.0">
+            <ScrollPane fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+              <content>
+                <VBox spacing="10.0">
                   <children>
-                    <ToggleButton fx:id="ratingOver90DaysButton" mnemonicParsing="false"
-                                  onAction="#onRatingOver90DaysButtonClicked" selected="true"
-                                  text="%userInfo.ratingOverTime.last3Months">
-                      <toggleGroup>
-                        <ToggleGroup fx:id="timeRange"/>
-                      </toggleGroup>
-                    </ToggleButton>
-                    <ToggleButton fx:id="ratingOver365DaysButton" mnemonicParsing="false"
-                                  onAction="#onRatingOver365DaysButtonClicked" text="%userInfo.ratingOverTime.lastYear"
-                                  toggleGroup="$timeRange"/>
+                    <GridPane hgap="10.0" vgap="10.0">
+                      <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                      </columnConstraints>
+                      <rowConstraints>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                      </rowConstraints>
+                      <children>
+                        <GridPane prefWidth="250.0" styleClass="tile">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+                          </rowConstraints>
+                          <children>
+                            <Label styleClass="h2" text="%ranked1v1.gamesPlayed"/>
+                            <Label fx:id="gamesPlayedLabel" alignment="CENTER" maxWidth="1.7976931348623157E308"
+                                   prefHeight="80.0" styleClass="ranked1v1-big-value" text="000" GridPane.rowIndex="1"/>
+                          </children>
+                        </GridPane>
+                        <GridPane prefWidth="250.0" styleClass="tile" GridPane.columnIndex="1">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+                          </rowConstraints>
+                          <children>
+                            <Label styleClass="h2" text="%userInfo.ratingGlobal"/>
+                            <Label fx:id="ratingLabelGlobal" prefHeight="80.0" styleClass="ranked1v1-big-value"
+                                   text="0000" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+                                   GridPane.valignment="CENTER"/>
+                          </children>
+                        </GridPane>
+                        <GridPane prefWidth="250.0" styleClass="tile" GridPane.columnIndex="2">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+                          </rowConstraints>
+                          <children>
+                            <Label styleClass="h2" text="%userInfo.rating1v1"/>
+                            <Label fx:id="ratingLabel1v1" prefHeight="80.0" styleClass="ranked1v1-big-value" text="0000"
+                                   GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER"/>
+                          </children>
+                        </GridPane>
+                        <VBox styleClass="tile" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+                          <children>
+                            <HBox alignment="TOP_RIGHT" spacing="10.0">
+                              <children>
+                                <ToggleButton fx:id="ratingOver90DaysButton" mnemonicParsing="false"
+                                              onAction="#onRatingOver90DaysButtonClicked" selected="true"
+                                              text="%userInfo.ratingOverTime.last3Months">
+                                  <toggleGroup>
+                                    <ToggleGroup fx:id="timeRange"/>
+                                  </toggleGroup>
+                                </ToggleButton>
+                                <ToggleButton fx:id="ratingOver365DaysButton" mnemonicParsing="false"
+                                              onAction="#onRatingOver365DaysButtonClicked"
+                                              text="%userInfo.ratingOverTime.lastYear" toggleGroup="$timeRange"/>
+                              </children>
+                            </HBox>
+                            <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false"
+                                       maxHeight="300.0">
+                              <xAxis>
+                                <NumberAxis fx:id="rating90DaysXAxis" autoRanging="true" forceZeroInRange="false"
+                                            side="BOTTOM"/>
+                              </xAxis>
+                              <yAxis>
+                                <NumberAxis fx:id="rating90DaysYAxis" autoRanging="true" forceZeroInRange="false"
+                                            side="LEFT"/>
+                              </yAxis>
+                            </LineChart>
+                          </children>
+                          <padding>
+                            <Insets top="10.0"/>
+                          </padding>
+                        </VBox>
+                      </children>
+                    </GridPane>
                   </children>
-                </HBox>
-                <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false" VBox.vgrow="ALWAYS">
-                  <xAxis>
-                    <NumberAxis fx:id="rating90DaysXAxis" autoRanging="true" forceZeroInRange="false" side="BOTTOM"/>
-                  </xAxis>
-                  <yAxis>
-                    <NumberAxis fx:id="rating90DaysYAxis" autoRanging="true" forceZeroInRange="false" side="LEFT"/>
-                  </yAxis>
-                </LineChart>
-              </children>
-            </VBox>
+                  <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="10.0"/>
+                  </padding>
+                </VBox>
+              </content>
+            </ScrollPane>
           </content>
+          <graphic>
+            <Label styleClass="fontawesome" text=""/>
+          </graphic>
+        </Tab>
+        <Tab text="%userInfo.statistics">
+          <content>
+            <ScrollPane fitToWidth="true">
+              <content>
+                <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0">
+                  <children>
+                    <Pane maxWidth="1.7976931348623157E308" styleClass="tile">
+                      <children>
+                        <StackedBarChart fx:id="factionsChart" maxWidth="395.0" prefHeight="300.0"
+                                         title="%userInfo.winLossPerFaction">
+                          <xAxis>
+                            <CategoryAxis fx:id="factionsCategoryAxis" side="BOTTOM"/>
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis fx:id="factionsNumberAxis" side="LEFT"/>
+                          </yAxis>
+                        </StackedBarChart>
+                      </children>
+                    </Pane>
+                    <Pane maxWidth="1.7976931348623157E308" styleClass="tile">
+                      <children>
+                        <PieChart fx:id="unitsBuiltChart" maxWidth="395.0" prefHeight="300.0"
+                                  title="%userInfo.builtByCategory"/>
+                      </children>
+                    </Pane>
+                    <Pane layoutX="459.0" layoutY="20.0" maxWidth="1.7976931348623157E308" styleClass="tile">
+                      <children>
+                        <PieChart fx:id="techBuiltChart" maxWidth="395.0" prefHeight="300.0"
+                                  title="%userInfo.builtByTech"/>
+                      </children>
+                    </Pane>
+                    <Pane layoutX="20.0" layoutY="352.0" maxWidth="1.7976931348623157E308" styleClass="tile">
+                      <children>
+                        <PieChart fx:id="gamesPlayedChart" maxWidth="395.0" prefHeight="300.0"
+                                  title="%userInfo.gamesPlayed"/>
+                      </children>
+                    </Pane>
+                  </children>
+                  <padding>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                  </padding>
+                </FlowPane>
+              </content>
+            </ScrollPane>
+          </content>
+          <graphic>
+            <Label styleClass="fontawesome" text=""/>
+          </graphic>
         </Tab>
         <Tab closable="false" text="%userInfo.achievements">
           <content>
@@ -115,11 +235,9 @@
                             <Label fx:id="unlockedOfTotalLabel" styleClass="h1" text="0/0" GridPane.columnIndex="1"/>
                             <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"
                                        GridPane.rowSpan="2147483647" GridPane.valignment="TOP"/>
-                            <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
                             <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"
                                        GridPane.columnIndex="2"/>
                             <Label fx:id="pointsOfTotalLabel" styleClass="h1" text="0/0" GridPane.columnIndex="3"/>
-                            <Label text="%achievements.sortBy" GridPane.columnIndex="4"/>
                           </children>
                         </GridPane>
                         <GridPane fx:id="mostRecentAchievementPane" hgap="20.0" VBox.vgrow="NEVER">
@@ -182,23 +300,20 @@
               </children>
             </VBox>
           </content>
+          <graphic>
+            <Label styleClass="fontawesome" text=""/>
+          </graphic>
         </Tab>
       </tabs>
     </TabPane>
-    <Button mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowSpan="2"
-            GridPane.valignment="TOP">
-      <graphic>
-        <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-          <image>
-            <Image url="@images/add_friend.png"/>
-          </image>
-        </ImageView>
-      </graphic>
-    </Button>
     <ImageView fx:id="avatarImageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true"
-               GridPane.rowSpan="2"/>
+               GridPane.rowSpan="2">
+      <GridPane.margin>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+      </GridPane.margin>
+    </ImageView>
   </children>
   <padding>
-    <Insets bottom="5.0" left="5.0" right="5.0" top="32.0"/>
+    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
   </padding>
 </GridPane>
