#129 improving login window integration

--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -992,6 +992,10 @@
   -fx-effect: -fx-drop-shadow;
 }
 
+.login * {
+  -fx-spacing: 15;
+}
+
 /***************** Web view *****************/
 
 .web-view {
