--- a/src/main/resources/themes/default/style-webview.css
+++ b/src/main/resources/themes/default/style-webview.css
@@ -84,11 +84,8 @@ a {
   vertical-align: top;
 }
 
-.chat-message .time {
-}
-
 .chat-message > .avatar {
-  width: 40;
+  width: 40px;
   height: 20px;
   padding: 0 2px;
 }
@@ -99,6 +96,7 @@ a {
 
 .chat-message .text {
   width: 100%;
+  word-break: break-word;
 }
 
 .chat-message .username {
